SQuirreL SQL FX Change Log
==============================


Bug fix: Schema loading configuration did not work for databases with catalogs but no schemas, e.g. MySQL.


Features of initial snapshot:
- Drivers
- Aliases including schema loading properties
- Session with Object tree and SQL execution
- SQL Code completion