@@ -5,6 +5,9 @@ import javafx.event.EventHandler;
 import javafx.scene.control.TextField;
 import javafx.scene.input.KeyEvent;
 
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.sql.ResultSet;
 import java.sql.Statement;
 import java.util.ArrayList;
@@ -87,5 +90,27 @@ public class Utils
       {
          t.consume();
       }
+   }
+
+   public static String getStackString(Throwable t)
+   {
+      StringWriter sw = new StringWriter();
+      PrintWriter pw = new PrintWriter(sw);
+      t.printStackTrace(pw);
+
+      pw.flush();
+      sw.flush();
+      String msg = sw.toString();
+
+      try
+      {
+         pw.close();
+         sw.close();
+      }
+      catch (IOException e)
+      {
+
+      }
+      return msg;
    }
 }
