@@ -29,3 +29,4 @@ objecttree.details.table.tablePrivileges=Table privileges
 objecttree.details.table.columnPrivileges=Column privileges
 objecttree.details.table.bestRowIdentifier=Best row identifier
 objecttree.details.table.versionColumns=Version columns
+objecttree.tableDetailsReader.fail= Failed to load meta data
